Fix: Sidebar - Header size at overlap

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -7535,8 +7535,16 @@
     overflow: hidden;
   }
 
+  #sidebar-header {
+    font-size: unset !important;
+  }
+  #sidebar-header > #sidebar-switcher-target {
+    font-size: 1.333em;
+  }
+
   @supports not -moz-bool-pref("userChrome.autohide.sidebar") {
     #sidebar-box,
+    #sidebar-header,
     #sidebar {
       min-width: var(--uc-sidebar-activate-width) !important;
       max-width: var(--uc-sidebar-activate-width) !important;
@@ -7547,7 +7555,7 @@
       will-change: padding-inline;
     }
     #sidebar-box:not([hidden="true"]) {
-      padding-inline-start: var(--uc-sidebar-activate-width);
+      padding-inline-start: var(--uc-sidebar-activate-width) !important;
     }
     @media (prefers-reduced-motion: no-preference) {
       #sidebar-box {
@@ -8240,12 +8248,14 @@
   }
 
   @supports -moz-bool-pref("userChrome.sidebar.overlap") {
+    #sidebar-header,
     #sidebar {
       min-width: var(--uc-sidebar-width) !important;
       max-width: var(--uc-sidebar-width) !important;
       will-change: min-width, max-width;
     }
 
+    #sidebar-box:is(:hover, :focus-within) > #sidebar-header,
     #sidebar-box:is(:hover, :focus-within) > #sidebar {
       min-width: var(--uc-sidebar-activate-width) !important;
       max-width: var(--uc-sidebar-activate-width) !important;
@@ -8267,11 +8277,13 @@
     }
 
     @media (prefers-reduced-motion: no-preference) {
+      #sidebar-header,
       #sidebar {
         transition: min-width var(--uc-autohide-sidebar-speed) var(--animation-easing-function)
           var(--uc-autohide-sidebar-delay) !important;
       }
 
+      #sidebar-box:is(:hover, :focus-within) > #sidebar-header,
       #sidebar-box:is(:hover, :focus-within) > #sidebar {
         transition-delay: 0ms !important;
       }
